Dummy-microservice/ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: basket-svc
spec:
  selector:
    app: basket
  ports:
    - protocol: TCP
      port: 80 

---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 80
